--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,13 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+###########
+.rules/
+backup/
+build/
+logs/
+output/
+repository/
+venv/
+
